--- a/src/pages/Login/Login.styles.css
+++ b/src/pages/Login/Login.styles.css
@@ -1,5 +1,12 @@
+.login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .login {
-  width: 300px;
+  max-width: 500px;
+  width: 80vw;
+  border: 2px solid #e8daff;
 }
 
 .login h1 {
@@ -14,7 +21,7 @@
 }
 
 .form-group {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
@@ -25,10 +32,11 @@
   font-weight: 700;
   text-transform: capitalize;
   margin-bottom: 0.4rem;
+  color: #003f87;
 }
 
 .form-group input {
-  color: white;
+  color: black;
   font-size: 1.2rem;
   width: 100%;
   padding: 0.4rem 0.6rem;
