--- a/src/components/VideoWrapper/VideoWrapper.styles.css
+++ b/src/components/VideoWrapper/VideoWrapper.styles.css
@@ -1,10 +1,8 @@
 .youtubeContainer {
   position: relative;
   width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
+  height: 65vh;
   overflow: hidden;
-  margin-bottom: 50px;
 }
 
 .youtubeContainer iframe {
