--- a/src/global.css
+++ b/src/global.css
@@ -34,7 +34,8 @@ body {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   font-size: 1rem;
-  left: -80px;
+  right: 1.5em;
+  top: 1.8em;
 }
 
 .dropdown-content a {
